@@ -55,6 +55,7 @@ support in Gnuastro. The list is ordered alphabetically (by first name).
     Dmitrii Oparin                       doparin2@gmail.com
     Elham Eftekhari                      elhamea@iac.es
     Elham Saremi                         saremi@ipm.ir
+    Elizabeth Sola                       es2074@cam.ac.uk
     Eric Thiébaut                        eric.thiebaut@univ-lyon1.fr
     Faezeh Bidjarchian                   fbidjarchian@gmail.com
     Fernando Buitrago                    fbuitrago@oal.ul.pt
